# umaumalogger

./: .gitignore  LICENSE  README.md  icon.pdn  index.html  package-lock.json  package.json  readme.txt
src/: App.svelte  App2.svelte  main.js  style.css
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: migrated.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs  screenshot.rs
src/lib/: Events.svelte  Filelogging.svelte  Logs.svelte  Screenshot.svelte  View.svelte  console.svelte
